--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-fullpage": "^0.1.18",
     "react-scripts": "1.0.17"
   },
   "scripts": {
