--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fullpage": "^0.1.18",
+    "react-modal": "^3.1.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
