--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.1.1",
+    "react-accessible-accordion": "^1.0.2",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fullpage": "^0.1.18",
