add - new modals by reactstrap

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-dom": "^16.1.1",
     "react-fa": "^5.0.0",
     "react-fullpage": "^0.1.18",
-    "react-modal": "^3.1.6",
+    "react-popper": "^0.7.4",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^5.0.0-alpha.4",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
