--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "fullpage.js": "^2.9.5",
     "html-webpack-plugin": "2.29.0",
+    "iscroll": "^5.2.0",
     "jest": "20.0.4",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -38,7 +41,6 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fa": "^5.0.0",
-    "react-fullpage": "^0.1.18",
     "react-popper": "^0.7.4",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
