--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-popper": "^0.7.4",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
+    "reqwest": "^2.0.5",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
