--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-fa": "^5.0.0",
     "react-overlay-menu": "^1.0.0",
     "react-popper": "^0.7.4",
+    "react-select": "^1.1.0",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "reqwest": "^2.0.5",
