--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fa": "^5.0.0",
+    "react-images": "^0.5.14",
     "react-overlay-menu": "^1.0.0",
     "react-popper": "^0.7.4",
     "react-select": "^1.1.0",
